--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather Planner</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -21,13 +21,41 @@
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
       crossorigin="anonymous"
     ></script>
+    <style>
+      #develop {
+        border: 1px solid red;
+      }
+    </style>
   </head>
   <body>
-    <script src="script.js"></script>
+    <main class="container-fluid">
+      <div class="row">
+        <aside class="col-3" id="develop">
+          <section>My search bar will go here.</section>
+          <section>My cities in local storage will go here</section>
+        </aside>
+        <div class="col-9" id="develop">
+          <section class="col-12" id="develop">
+            My current city will go here
+          </section>
+          <section class="col-12" id="develop">
+            <div class="row">
+              <div class="col-2" id="develop">Day</div>
+              <div class="col-2" id="develop">Day</div>
+              <div class="col-2" id="develop">Day</div>
+              <div class="col-2" id="develop">Day</div>
+              <div class="col-2" id="develop">Day</div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
