appended some elements

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <section>My cities in local storage will go here</section>
         </aside>
         <div class="col-9" id="develop">
-          <section class="col-12" id="develop">
+          <section class="col-12" id="currently-selected">
             My current city will go here
           </section>
           <section class="col-12" id="develop">
