--- a/index.html
+++ b/index.html
@@ -22,20 +22,18 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      #develop {
-        border: 1px solid red;
-      }
+      
     </style>
   </head>
   <body>
     <main class="container-fluid">
       <div class="row">
-        <aside class="col-3" id="develop">
+        <aside class="col-3" ">
           <section>
             <form id="search-form">
               <div class="form-group">
                 <label for="exampleInputPassword1">Search</label>
-                <input type="text" class="form-control" id="city-search" />
+                <input type="text" class="form-control" />
               </div>
 
               <button type="submit" class="btn btn-primary">Search</button>
@@ -44,17 +42,17 @@
 
           <section>My cities in local storage will go here</section>
         </aside>
-        <div class="col-9" id="develop">
+        <div class="col-9" >
           <section class="col-12" id="currently-selected">
             My current city will go here
           </section>
-          <section class="col-12" id="develop">
+          <section class="col-12"></section>
             <div class="row">
-              <div class="col-2" id="develop">Day</div>
-              <div class="col-2" id="develop">Day</div>
-              <div class="col-2" id="develop">Day</div>
-              <div class="col-2" id="develop">Day</div>
-              <div class="col-2" id="develop">Day</div>
+              <div class="col-2" >Day</div>
+              <div class="col-2" >Day</div>
+              <div class="col-2" >Day</div>
+              <div class="col-2" >Day</div>
+              <div class="col-2" >Day</div>
             </div>
           </section>
         </div>
